Renamed some files, introduced more tests